# geo-harvester

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml
.github/workflows/: ci.yml  dev-build.yml  prod-promote.yml  stage-build.yml
docs/: alma_harvests.md  architecture.md  metadata_normalization.md  mit_harvests.md  ogm_harvests.md
harvester/: cli.py  config.py  ogm_repositories_config.yaml  utils.py
harvester/aws/: eventbridge.py  s3.py  sqs.py
harvester/harvest/: __init__.py  alma.py  exceptions.py  mit.py  ogm.py
harvester/records/: __init__.py  aardvark.py  controlled_terms.py  exceptions.py  fgdc.py  gbl1.py  iso19139.py  marc.py  record.py  validators.py
harvester/records/formats/: __init__.py  aardvark.py  fgdc.py  gbl1.py  helpers.py  iso19139.py  marc.py
harvester/records/schemas/: geoblacklight-schema-1.0.json  geoblacklight-schema-aardvark.json  mit-schema-aardvark.json
harvester/records/sources/: alma.py  mit.py  ogm.py
tests/: conftest.py  test_cli.py  test_config.py  test_utils.py
tests/fixtures/alma/s3_folder/: alma-2023-12-31-full-extracted-records-to-index_01.xml  file_filtering_should_ignore.txt
tests/fixtures/alma/single_records/: geospatial_all_fields.xml  geospatial_fail_655.xml  geospatial_fail_949.xml  geospatial_fail_985.xml  (+6 more)
tests/fixtures/github_commits_rss/: no_commits.xml  single_commit.xml
tests/fixtures/ogm/: ogm_test_config.yaml
tests/fixtures/sqs/: invalid_message.json  messages.json  missing_file_message.json  valid_created_message.json  valid_message.json  valid_message.pickle
tests/harvest/: test_harvester.py  test_mit_harvester.py
tests/test_aws/: test_eventbridge.py  test_s3.py  test_sqs.py
tests/test_harvest/: test_alma_harvester.py  test_harvester.py  test_mit_harvester.py  test_ogm_harvester.py
tests/test_records/: test_aardvark.py  test_fgdc.py  test_gbl1.py  test_iso19139.py  test_marc.py  test_marcalyx_record.py  test_record.py  test_validator.py
(+13 files in other folders)
