[project]
name = "geo-harvester"
version = "1.3.1"
requires-python = ">=3.13"
dependencies = [
  "attrs",
  "boto3",
  "click==8.1.8",
  "jsonlines",
  "jsonschema",
  "lxml",
  "marcalyx",
  "pyaml",
  "pycountry",
  "pygit2",
  "python-dateutil",
  "PyYAML",
  "requests",
  "rfc3339-validator",
  "sentry-sdk",
  "shapely",
  "smart-open",
  "xmltodict",
]

[project.scripts]
harvester = "harvester.cli:main"

[dependency-groups]
dev = [
  "boto3-stubs[events,s3,sqs]",
  "coverage[toml]",
  "coveralls",
  "freezegun",
  "ipython",
  "lxml-stubs",
  "mypy",
  "moto",
  "pip-audit",
  "pre-commit",
  "pytest",
  "ruff",
  "types-jsonschema",
  "types-pygit2",
  "types-python-dateutil",
  "types-pyyaml",
  "types-requests",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["harvester*"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["tests/", "output/"]

[[tool.mypy.overrides]]
module = ["shapely"]
ignore_missing_imports = true

[tool.pytest.ini_options]
log_level = "INFO"
markers = [
  "use_github_rss: marker to bypass autoused fixture that make Github RSS calls",
]

[tool.ruff]
target-version = "py313"
line-length = 90
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = [
  "COM812",
  "D107",
  "N812",
  "PTH",
  "C90",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "S321",
  "D415",
  "N802",
  "TD002",
  "TD003",
]
fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
  "ANN",
  "ARG001",
  "S101",
]
"output/**/*" = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"
